--- a/index.html
+++ b/index.html
@@ -6101,145 +6101,198 @@
         <section id="references">
           <h2>References</h2>
           <div class="references-list">
-            <p>
-              [1] Meng, F., McKechnie, J., Turner, T., Wong, K., &amp;
-              Pickering, S. (2017). Environmental Aspects of Use of Recycled
-              Carbon Fiber Composites in Automotive Applications.
-              <em>Environmental Science &amp; Technology</em>, 51(21),
-              12727-12736.
-            </p>
-            <p>
-              [2] Cheng, H., Wang, Q., Guo, L., Zhou, J., Tang, M., Zhai, H.,
-              Wang, H., &amp; Qian, Z. (2024). Investigation of alignment and
-              layup optimization of recycled carbon fiber mats on mechanical and
-              electromagnetic shielding properties of composites.
-              <em>Polymer Composites</em>, 45(7).
-            </p>
-            <p>
-              [3] Sato, M., Kataoka, Y., Higashide, M., Ishida, Y., &amp;
-              Sugimoto, S. (2025). Evaluation of the Mechanical Properties of
-              Highly Oriented Recycled Carbon Fiber Composites Using the
-              Vacuum-Assisted Resin Transfer Molding, Wet-Layup, and Resin
-              Transfer Molding Methods. <em>Polymers</em>, 17(10), 1293.
-            </p>
-            <p>
-              [4] Barnett, P.R., Vigna, L., Martínez-Collado, J.L., Calzolari,
-              A., &amp; Penumadu, D. (2023). Crashworthiness of recycled carbon
-              fiber composite sinusoidal structures at dynamic rates.
-              <em>Composite Structures</em>, 312, 116847.
-            </p>
-            <p>
-              [5] Ozdemir, T., Deitzel, J., Crane, R., Yarlagadda, S.,
-              Blackwell, C., Davis, M., Emmerich, R., &amp; Heider, D. (2024).
-              Carbon Fiber Composites Recycling Technology Enabled by the TuFF
-              Technology. <em>Recycling</em>, 9(1), 11.
-            </p>
-            <p>
-              [6] Gopalraj, S.K. &amp; Kärki, T. (2020). A review on the
-              recycling of waste carbon fibre/glass fibre-reinforced composites:
-              fibre recovery, properties and life-cycle analysis.
-              <em>SN Applied Sciences</em>, 2, 433.
-            </p>
-            <p>
-              [7] Balaga, U.K., Gunes, A., Ozdemir, T., Blackwell, C., Davis,
-              M., Sauerbrunn, S., Fuessel, L., Deitzel, J., &amp; Heider, D.
-              (2025). Optimization of the Recycling Process for Aligned Short
-              Carbon Fiber TuFF Composites. <em>Recycling</em>, 10(2), 55.
-            </p>
-            <p>
-              [8] Ansari, M.S., Zafar, S., Pathak, H., &amp; Anand, A. (2025).
-              Effect of Microwave Assisted Chemical Recycling Process on Surface
-              Properties and Mechanical Performance of Recycled Carbon Fiber.
-              <em>Fibers and Polymers</em>, 26.
-            </p>
-            <p>
-              [9] Chahine, G., Meraki, Y., Barakat, A., Hess, J., Fono Tamo,
-              R.F., &amp; Vaidya, U. (2025). Hybridizing of glass sheet molding
-              compounds (SMC) with recycled carbon fiber (rCF).
-              <em>Journal of Composite Materials</em>.
-            </p>
-            <p>
-              [10] Sharma, A. &amp; Zafar, S. (2025). Enhancing Multifunctional
-              Properties of Recycled Carbon Fiber Composites Through Graphene
-              Nanoplatelet Integration. <em>Polymer Composites</em>.
-            </p>
-            <p>
-              [11] Ueda, M., Sato, K., Ichihara, N., Matsumoto, Y., &amp; Nagai,
-              S. (2025). Three-dimensional printing of recycled carbon fiber
-              spun yarn reinforced polyamide.
-              <em>Journal of Thermoplastic Composite Materials</em>.
-            </p>
-            <p>
-              [12] Pakdel, E., Kashi, S., Varley, R.J., &amp; Wang, X. (2020).
-              Recent progress in recycling carbon fibre reinforced composites
-              and dry carbon fibre wastes.
-              <em>Resources, Conservation and Recycling</em>, 166, 105340.
-            </p>
-            <p>
-              [13] Nag, M. &amp; Shrivastava, A. (2023). Characterization and
-              performance evaluation of nylon-66 composite at various
-              composition of carbon fibers and GNP reinforcement.
-              <em>Journal of Plastic Film &amp; Sheeting</em>, 40(2).
-            </p>
-            <p>
-              [14] Longana, M., Yu, H., Hamerton, I., &amp; Potter, K. (2018).
-              Development and application of a quality control and property
-              assurance methodology for reclaimed carbon fibers based on the
-              HiPerDiF method and interlaminated hybrid specimens.
-              <em>Advanced Manufacturing: Polymer &amp; Composites Science</em>,
-              4(2), 48-55.
-            </p>
-            <p>
-              [15] van de Werken, N., Allred, R., &amp; Tehrani, M. (2017).
-              Effect of Alignment and Sizing on Mechanical Properties of
-              Discontinuous Recycled Carbon Fiber Composites.
-              <em>Proceedings of the American Society for Composites</em>.
-            </p>
-            <p>
-              [16] Miyake, T. &amp; Imaeda, S. (2016). A dry aligning method of
-              discontinuous carbon fibers and improvement of mechanical
-              properties of discontinuous fiber composites.
-              <em>Advanced Manufacturing: Polymer &amp; Composites Science</em>,
-              2(3-4), 117-123.
-            </p>
+            <a href="https://doi.org/10.1021/acs.est.7b04069">
+              <p>
+                [1] Meng, F., McKechnie, J., Turner, T., Wong, K., &amp;
+                Pickering, S. (2017). Environmental Aspects of Use of Recycled
+                Carbon Fiber Composites in Automotive Applications.
+                <em>Environmental Science &amp; Technology</em>, 51(21),
+                12727-12736.
+              </p>
+            </a>
+            <a href="https://doi.org/10.1002/pc.28494">
+              <p>
+                [2] Cheng, H., Wang, Q., Guo, L., Zhou, J., Tang, M., Zhai, H.,
+                Wang, H., &amp; Qian, Z. (2024). Investigation of alignment and
+                layup optimization of recycled carbon fiber mats on mechanical
+                and electromagnetic shielding properties of composites.
+                <em>Polymer Composites</em>, 45(7).
+              </p>
+            </a>
+            <a href="https://doi.org/10.3390/polym17101293">
+              <p>
+                [3] Sato, M., Kataoka, Y., Higashide, M., Ishida, Y., &amp;
+                Sugimoto, S. (2025). Evaluation of the Mechanical Properties of
+                Highly Oriented Recycled Carbon Fiber Composites Using the
+                Vacuum-Assisted Resin Transfer Molding, Wet-Layup, and Resin
+                Transfer Molding Methods. <em>Polymers</em>, 17(10), 1293.
+              </p>
+            </a>
+            <a href="https://doi.org/10.1016/j.compstruct.2023.116847">
+              <p>
+                [4] Barnett, P.R., Vigna, L., Martínez-Collado, J.L., Calzolari,
+                A., &amp; Penumadu, D. (2023). Crashworthiness of recycled
+                carbon fiber composite sinusoidal structures at dynamic rates.
+                <em>Composite Structures</em>, 312, 116847.
+              </p>
+            </a>
+
+            <a href="https://doi.org/10.3390/recycling9010011">
+              <p>
+                [5] Ozdemir, T., Deitzel, J., Crane, R., Yarlagadda, S.,
+                Blackwell, C., Davis, M., Emmerich, R., &amp; Heider, D. (2024).
+                Carbon Fiber Composites Recycling Technology Enabled by the TuFF
+                Technology. <em>Recycling</em>, 9(1), 11.
+              </p>
+            </a>
+
+            <a href="https://doi.org/10.1007/s42452-020-2195-4">
+              <p>
+                [6] Gopalraj, S.K. &amp; Kärki, T. (2020). A review on the
+                recycling of waste carbon fibre/glass fibre-reinforced
+                composites: fibre recovery, properties and life-cycle analysis.
+                <em>SN Applied Sciences</em>, 2, 433.
+              </p>
+            </a>
+
+            <a href="https://doi.org/10.3390/recycling10020055">
+              <p>
+                [7] Balaga, U.K., Gunes, A., Ozdemir, T., Blackwell, C., Davis,
+                M., Sauerbrunn, S., Fuessel, L., Deitzel, J., &amp; Heider, D.
+                (2025). Optimization of the Recycling Process for Aligned Short
+                Carbon Fiber TuFF Composites. <em>Recycling</em>, 10(2), 55.
+              </p>
+            </a>
+
+            <a href="https://doi.org/10.1007/s12221-025-01103-y">
+              <p>
+                [8] Ansari, M.S., Zafar, S., Pathak, H., &amp; Anand, A. (2025).
+                Effect of Microwave Assisted Chemical Recycling Process on
+                Surface Properties and Mechanical Performance of Recycled Carbon
+                Fiber.
+                <em>Fibers and Polymers</em>, 26.
+              </p>
+            </a>
+            <a href="https://doi.org/10.1177/00219983251319590">
+              <p>
+                [9] Chahine, G., Meraki, Y., Barakat, A., Hess, J., Fono Tamo,
+                R.F., &amp; Vaidya, U. (2025). Hybridizing of glass sheet
+                molding compounds (SMC) with recycled carbon fiber (rCF).
+                <em>Journal of Composite Materials</em>.
+              </p>
+            </a>
+            <a href="https://doi.org/10.1002/pc.70257">
+              <p>
+                [10] Sharma, A. &amp; Zafar, S. (2025). Enhancing
+                Multifunctional Properties of Recycled Carbon Fiber Composites
+                Through Graphene Nanoplatelet Integration.
+                <em>Polymer Composites</em>.
+              </p>
+            </a>
+            <a href="https://doi.org/10.1177/08927057251325555">
+              <p>
+                [11] Ueda, M., Sato, K., Ichihara, N., Matsumoto, Y., &amp;
+                Nagai, S. (2025). Three-dimensional printing of recycled carbon
+                fiber spun yarn reinforced polyamide.
+                <em>Journal of Thermoplastic Composite Materials</em>.
+              </p>
+            </a>
+
+            <a href="https://doi.org/10.1016/j.resconrec.2020.105340">
+              <p>
+                [12] Pakdel, E., Kashi, S., Varley, R.J., &amp; Wang, X. (2020).
+                Recent progress in recycling carbon fibre reinforced composites
+                and dry carbon fibre wastes.
+                <em>Resources, Conservation and Recycling</em>, 166, 105340.
+              </p>
+            </a>
+            <a href="https://doi.org/10.1177/07316844231198923">
+              <p>
+                [13] Nag, M. &amp; Shrivastava, A. (2023). Characterization and
+                performance evaluation of nylon-66 composite at various
+                composition of carbon fibers and GNP reinforcement.
+                <em>Journal of Plastic Film &amp; Sheeting</em>, 40(2).
+              </p>
+            </a>
+            <a href="https://doi.org/10.1080/20550340.2018.1456504">
+              <p>
+                [14] Longana, M., Yu, H., Hamerton, I., &amp; Potter, K. (2018).
+                Development and application of a quality control and property
+                assurance methodology for reclaimed carbon fibers based on the
+                HiPerDiF method and interlaminated hybrid specimens.
+                <em>Advanced Manufacturing: Polymer &amp; Composites Science</em
+                >, 4(2), 48-55.
+              </p>
+            </a>
+            <a href="https://doi.org/10.12783/asc2017/15366">
+              <p>
+                [15] van de Werken, N., Allred, R., &amp; Tehrani, M. (2017).
+                Effect of Alignment and Sizing on Mechanical Properties of
+                Discontinuous Recycled Carbon Fiber Composites.
+                <em>Proceedings of the American Society for Composites</em>.
+              </p>
+            </a>
+            <a href="https://doi.org/10.1080/20550340.2016.1265693">
+              <p>
+                [16] Miyake, T. &amp; Imaeda, S. (2016). A dry aligning method
+                of discontinuous carbon fibers and improvement of mechanical
+                properties of discontinuous fiber composites.
+                <em>Advanced Manufacturing: Polymer &amp; Composites Science</em
+                >, 2(3-4), 117-123.
+              </p>
+            </a>
+
             <p>
               [17] van de Werken, N. (2017). Effect of Alignment, Sizing, and
               Manufacturing Method on Mechanical Properties of Recycled Carbon
               Fiber Composites.
               <em>Master's Thesis, University of New Mexico</em>.
             </p>
-            <p>
-              [18] Abdi, B., Wang, Y., Gong, H., &amp; Su, M. (2025). Recycling,
-              Remanufacturing and Applications of Semi-Long and Long Carbon
-              Fibre from Waste Composites: A Review.
-              <em>Applied Composite Materials</em>.
-            </p>
-            <p>
-              [19] Newman, B., Doeven, E.H., Francis, P.S., Stojcevski, F.,
-              Hayne, D.J., Chalker, J., &amp; Henderson, L.C. (2022). A high
-              value application of reclaimed carbon fibers: Environmental
-              remediation and redeployment in structural composites.
-              <em>Sustainable Materials and Technologies</em>, 34, e00546.
-            </p>
-            <p>
-              [20] Trukhinov, D., Lebedeva, E.A., Ivanova, E., Istomina, T.S.,
-              &amp; Astaf'eva, S. (2025). Efficiency of carbon fiber extraction
-              by low-temperature solvolysis. <em>ChemChemTech</em>, 68(4),
-              59-66.
-            </p>
-            <p>
-              [21] Wickramasingha, Y.A., Stojcevski, F., Eyckens, D.J., Hayne,
-              D.J., Chalker, J., &amp; Henderson, L.C. (2023). Exploring Inverse
-              Vulcanized Dicyclopentadiene As a Polymer Matrix for Carbon Fiber
-              Composites. <em>Macromolecular Materials and Engineering</em>,
-              308(12).
-            </p>
-            <p>
-              [22] Kehrer, L., Scheuring, B., Blarr, J., &amp; Böhlke, T.
-              (2024). Hydrothermal behavior of pure PA 6 and homogenization of
-              discontinuous long carbon fiber-reinforced PA 6. <em>PAMM</em>,
-              24(4).
-            </p>
+
+            <a href="https://doi.org/10.1007/s10443-025-10316-6">
+              <p>
+                [18] Abdi, B., Wang, Y., Gong, H., &amp; Su, M. (2025).
+                Recycling, Remanufacturing and Applications of Semi-Long and
+                Long Carbon Fibre from Waste Composites: A Review.
+                <em>Applied Composite Materials</em>.
+              </p>
+            </a>
+            <a href="https://doi.org/10.1016/j.susmat.2022.e00546">
+              <p>
+                [19] Newman, B., Doeven, E.H., Francis, P.S., Stojcevski, F.,
+                Hayne, D.J., Chalker, J., &amp; Henderson, L.C. (2022). A high
+                value application of reclaimed carbon fibers: Environmental
+                remediation and redeployment in structural composites.
+                <em>Sustainable Materials and Technologies</em>, 34, e00546.
+              </p>
+            </a>
+            <a href="https://doi.org/10.6060/ivkkt.20256804.7162">
+              <p>
+                [20] Trukhinov, D., Lebedeva, E.A., Ivanova, E., Istomina, T.S.,
+                &amp; Astaf'eva, S. (2025). Efficiency of carbon fiber
+                extraction by low-temperature solvolysis. <em>ChemChemTech</em>,
+                68(4), 59-66.
+              </p>
+            </a>
+            <a href="https://doi.org/10.1002/mame.202300298">
+              <p>
+                [21] Wickramasingha, Y.A., Stojcevski, F., Eyckens, D.J., Hayne,
+                D.J., Chalker, J., &amp; Henderson, L.C. (2023). Exploring
+                Inverse Vulcanized Dicyclopentadiene As a Polymer Matrix for
+                Carbon Fiber Composites.
+                <em>Macromolecular Materials and Engineering</em>, 308(12).
+              </p></a
+            >
+
+            <a href="https://doi.org/10.1002/pamm.202400135">
+              <p>
+                [22] Kehrer, L., Scheuring, B., Blarr, J., &amp; Böhlke, T.
+                (2024). Hydrothermal behavior of pure PA 6 and homogenization of
+                discontinuous long carbon fiber-reinforced PA 6. <em>PAMM</em>,
+                24(4).
+              </p>
+            </a>
+
             <p>
               [23] Yatim, N.M. (2020). Oxidation of Reclaimed Carbon Fiber
               Surfaces for The Improvement of Fiber/Composite Adhesion.
@@ -6377,7 +6430,9 @@
               Have questions about implementing recycled carbon fiber composites
               in your operations?
             </p>
-            <a href="https://www.addcomposites.com/contact" class="cta-button"
+            <a
+              href="https://www.addcomposites.com/contact-us"
+              class="cta-button"
               >Contact Us for a Consultation</a
             >
           </div>
