added open on new tab logic

--- a/index.html
+++ b/index.html
@@ -6101,7 +6101,11 @@
         <section id="references">
           <h2>References</h2>
           <div class="references-list">
-            <a href="https://doi.org/10.1021/acs.est.7b04069">
+            <a
+              href="https://doi.org/10.1021/acs.est.7b04069"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [1] Meng, F., McKechnie, J., Turner, T., Wong, K., &amp;
                 Pickering, S. (2017). Environmental Aspects of Use of Recycled
@@ -6110,7 +6114,11 @@
                 12727-12736.
               </p>
             </a>
-            <a href="https://doi.org/10.1002/pc.28494">
+            <a
+              href="https://doi.org/10.1002/pc.28494"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [2] Cheng, H., Wang, Q., Guo, L., Zhou, J., Tang, M., Zhai, H.,
                 Wang, H., &amp; Qian, Z. (2024). Investigation of alignment and
@@ -6119,7 +6127,11 @@
                 <em>Polymer Composites</em>, 45(7).
               </p>
             </a>
-            <a href="https://doi.org/10.3390/polym17101293">
+            <a
+              href="https://doi.org/10.3390/polym17101293"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [3] Sato, M., Kataoka, Y., Higashide, M., Ishida, Y., &amp;
                 Sugimoto, S. (2025). Evaluation of the Mechanical Properties of
@@ -6128,7 +6140,11 @@
                 Transfer Molding Methods. <em>Polymers</em>, 17(10), 1293.
               </p>
             </a>
-            <a href="https://doi.org/10.1016/j.compstruct.2023.116847">
+            <a
+              href="https://doi.org/10.1016/j.compstruct.2023.116847"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [4] Barnett, P.R., Vigna, L., Martínez-Collado, J.L., Calzolari,
                 A., &amp; Penumadu, D. (2023). Crashworthiness of recycled
@@ -6137,7 +6153,11 @@
               </p>
             </a>
 
-            <a href="https://doi.org/10.3390/recycling9010011">
+            <a
+              href="https://doi.org/10.3390/recycling9010011"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [5] Ozdemir, T., Deitzel, J., Crane, R., Yarlagadda, S.,
                 Blackwell, C., Davis, M., Emmerich, R., &amp; Heider, D. (2024).
@@ -6146,7 +6166,11 @@
               </p>
             </a>
 
-            <a href="https://doi.org/10.1007/s42452-020-2195-4">
+            <a
+              href="https://doi.org/10.1007/s42452-020-2195-4"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [6] Gopalraj, S.K. &amp; Kärki, T. (2020). A review on the
                 recycling of waste carbon fibre/glass fibre-reinforced
@@ -6155,7 +6179,11 @@
               </p>
             </a>
 
-            <a href="https://doi.org/10.3390/recycling10020055">
+            <a
+              href="https://doi.org/10.3390/recycling10020055"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [7] Balaga, U.K., Gunes, A., Ozdemir, T., Blackwell, C., Davis,
                 M., Sauerbrunn, S., Fuessel, L., Deitzel, J., &amp; Heider, D.
@@ -6164,7 +6192,11 @@
               </p>
             </a>
 
-            <a href="https://doi.org/10.1007/s12221-025-01103-y">
+            <a
+              href="https://doi.org/10.1007/s12221-025-01103-y"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [8] Ansari, M.S., Zafar, S., Pathak, H., &amp; Anand, A. (2025).
                 Effect of Microwave Assisted Chemical Recycling Process on
@@ -6173,7 +6205,11 @@
                 <em>Fibers and Polymers</em>, 26.
               </p>
             </a>
-            <a href="https://doi.org/10.1177/00219983251319590">
+            <a
+              href="https://doi.org/10.1177/00219983251319590"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [9] Chahine, G., Meraki, Y., Barakat, A., Hess, J., Fono Tamo,
                 R.F., &amp; Vaidya, U. (2025). Hybridizing of glass sheet
@@ -6181,7 +6217,11 @@
                 <em>Journal of Composite Materials</em>.
               </p>
             </a>
-            <a href="https://doi.org/10.1002/pc.70257">
+            <a
+              href="https://doi.org/10.1002/pc.70257"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [10] Sharma, A. &amp; Zafar, S. (2025). Enhancing
                 Multifunctional Properties of Recycled Carbon Fiber Composites
@@ -6189,7 +6229,11 @@
                 <em>Polymer Composites</em>.
               </p>
             </a>
-            <a href="https://doi.org/10.1177/08927057251325555">
+            <a
+              href="https://doi.org/10.1177/08927057251325555"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [11] Ueda, M., Sato, K., Ichihara, N., Matsumoto, Y., &amp;
                 Nagai, S. (2025). Three-dimensional printing of recycled carbon
@@ -6198,7 +6242,11 @@
               </p>
             </a>
 
-            <a href="https://doi.org/10.1016/j.resconrec.2020.105340">
+            <a
+              href="https://doi.org/10.1016/j.resconrec.2020.105340"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [12] Pakdel, E., Kashi, S., Varley, R.J., &amp; Wang, X. (2020).
                 Recent progress in recycling carbon fibre reinforced composites
@@ -6206,7 +6254,11 @@
                 <em>Resources, Conservation and Recycling</em>, 166, 105340.
               </p>
             </a>
-            <a href="https://doi.org/10.1177/07316844231198923">
+            <a
+              href="https://doi.org/10.1177/07316844231198923"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [13] Nag, M. &amp; Shrivastava, A. (2023). Characterization and
                 performance evaluation of nylon-66 composite at various
@@ -6214,7 +6266,11 @@
                 <em>Journal of Plastic Film &amp; Sheeting</em>, 40(2).
               </p>
             </a>
-            <a href="https://doi.org/10.1080/20550340.2018.1456504">
+            <a
+              href="https://doi.org/10.1080/20550340.2018.1456504"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [14] Longana, M., Yu, H., Hamerton, I., &amp; Potter, K. (2018).
                 Development and application of a quality control and property
@@ -6224,7 +6280,11 @@
                 >, 4(2), 48-55.
               </p>
             </a>
-            <a href="https://doi.org/10.12783/asc2017/15366">
+            <a
+              href="https://doi.org/10.12783/asc2017/15366"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [15] van de Werken, N., Allred, R., &amp; Tehrani, M. (2017).
                 Effect of Alignment and Sizing on Mechanical Properties of
@@ -6232,7 +6292,11 @@
                 <em>Proceedings of the American Society for Composites</em>.
               </p>
             </a>
-            <a href="https://doi.org/10.1080/20550340.2016.1265693">
+            <a
+              href="https://doi.org/10.1080/20550340.2016.1265693"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [16] Miyake, T. &amp; Imaeda, S. (2016). A dry aligning method
                 of discontinuous carbon fibers and improvement of mechanical
@@ -6249,7 +6313,11 @@
               <em>Master's Thesis, University of New Mexico</em>.
             </p>
 
-            <a href="https://doi.org/10.1007/s10443-025-10316-6">
+            <a
+              href="https://doi.org/10.1007/s10443-025-10316-6"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [18] Abdi, B., Wang, Y., Gong, H., &amp; Su, M. (2025).
                 Recycling, Remanufacturing and Applications of Semi-Long and
@@ -6257,7 +6325,11 @@
                 <em>Applied Composite Materials</em>.
               </p>
             </a>
-            <a href="https://doi.org/10.1016/j.susmat.2022.e00546">
+            <a
+              href="https://doi.org/10.1016/j.susmat.2022.e00546"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [19] Newman, B., Doeven, E.H., Francis, P.S., Stojcevski, F.,
                 Hayne, D.J., Chalker, J., &amp; Henderson, L.C. (2022). A high
@@ -6266,7 +6338,11 @@
                 <em>Sustainable Materials and Technologies</em>, 34, e00546.
               </p>
             </a>
-            <a href="https://doi.org/10.6060/ivkkt.20256804.7162">
+            <a
+              href="https://doi.org/10.6060/ivkkt.20256804.7162"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [20] Trukhinov, D., Lebedeva, E.A., Ivanova, E., Istomina, T.S.,
                 &amp; Astaf'eva, S. (2025). Efficiency of carbon fiber
@@ -6274,7 +6350,11 @@
                 68(4), 59-66.
               </p>
             </a>
-            <a href="https://doi.org/10.1002/mame.202300298">
+            <a
+              href="https://doi.org/10.1002/mame.202300298"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [21] Wickramasingha, Y.A., Stojcevski, F., Eyckens, D.J., Hayne,
                 D.J., Chalker, J., &amp; Henderson, L.C. (2023). Exploring
@@ -6284,7 +6364,11 @@
               </p></a
             >
 
-            <a href="https://doi.org/10.1002/pamm.202400135">
+            <a
+              href="https://doi.org/10.1002/pamm.202400135"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <p>
                 [22] Kehrer, L., Scheuring, B., Blarr, J., &amp; Böhlke, T.
                 (2024). Hydrothermal behavior of pure PA 6 and homogenization of
@@ -6433,6 +6517,8 @@
             <a
               href="https://www.addcomposites.com/contact-us"
               class="cta-button"
+              target="_blank"
+              rel="noopener noreferrer"
               >Contact Us for a Consultation</a
             >
           </div>
